2005-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* config.h, config.h.in, stamp-chi: Regenerated on Solaris for updates
	to config.h.in.footer and config.h.in.in committed on Windows.

2005-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.footer: Reorganize into 3 sections (macros, typedefs and
	function prototypes) and alphabetize each section.  Synchronize with
	GNULib import so Windows build succeeds.
	* config.h.in.in: Synchronize with GNULib import so Windows build
	succeeds.
	* unistd.h: Include standard function prototypes from Microsoft files
	to decrease warnings in GNULib import.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (_POSIX_PTHREAD_SEMANTICS): Undef on Windows.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (MISSING_SYS_CDEFS_H): Guess this should be defined.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* filesubr.c (xresolvepath): Remove this function.

2005-05-17  Conrad T. Pino  <Conrad@Pino.com>

	* pwd.c, pwd.h: Add "const" modifier to "getpwnam" & "getgrnam" function
	"char *" argument to elminate warning in "../lib/glob.c" module.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Define LOCK_COMPATIBILITY.

2005-04-25  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in: Syncronize with ../config.h.in file.
	Added: #undef HAVE_DECL_MEMRCHR, #undef HAVE_PAM_PAM_APPL_H,
	#undef HAVE_SECURITY_PAM_APPL_H
	* config.h, config.h.in: Regenerated.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am, stdint.h: Updated from GNULIB.
	* Makefile.in: Regenerated.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* filesubr.c (open_file): Remove this function.

2005-03-09  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove mkconfig & fix-msvc-mak.
	* Makefile.am (EXTRA_DIST): Include mkconfig.pl & fix-msvc-mak.pl.
	(stamp-chi): Call $(PERL) mkconfig.pl explicitly.
	* plhead.pl: Remove this file.
	* mkconfig.pl, fix-msvc-mak.pl: Turn on warnings.
